infrastructures/dev/25c-shared/kube-prometheus-stack/istio/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - "grafana.25c-team1.art"
  gateways:
    - platform-istio/ingressgateway
  http:
    - route:
        - destination:
            host: monitoring-kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
